--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./static/input.css -o ./static/output.css --watch"
+    "dev:css": "npx tailwindcss -i ./static/input.css -o ./static/output.css --watch",
+    "build:css": "npx tailwindcss -i ./static/input.css -o ./static/output.css"
   },
   "repository": {
     "type": "git",
